<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mgmt_key"
        android:orderInCategory="1"
        android:title="@string/piv_change_mgmt_key"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_pin"
        android:orderInCategory="2"
        android:title="@string/piv_change_pin"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_puk"
        android:orderInCategory="3"
        android:title="@string/piv_change_puk"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_retries"
        android:orderInCategory="4"
        android:title="@string/piv_change_retries"
        android:contentDescription="@string/piv_change_retries_description"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unblock"
        android:orderInCategory="5"
        android:title="@string/piv_unblock_pin"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reset"
        android:orderInCategory="10"
        android:title="@string/piv_reset"
        android:contentDescription="@string/piv_reset_description"
        app:showAsAction="never" />
</menu>