<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/oath_fragment"
            android:icon="@drawable/ic_time"
            android:orderInCategory="4"
            android:title="@string/oath_demo"/>

        <item
            android:id="@+id/yubico_otp_fragment"
            android:icon="@drawable/ic_shield"
            android:orderInCategory="5"
            android:title="@string/yubico_otp_demo"/>

        <item
            android:id="@+id/piv_fragment"
            android:icon="@drawable/ic_account_box"
            android:orderInCategory="6"
            android:title="@string/piv_demo"/>

        <item
            android:id="@+id/configure_otp_fragment"
            android:icon="@android:drawable/ic_menu_compass"
            android:orderInCategory="6"
            android:title="@string/configure_demo"/>

        <item
            android:id="@+id/challenge_fragment"
            android:icon="@drawable/ic_refresh_24dp"
            android:orderInCategory="6"
            android:title="@string/chresp_demo"/>

        <item
            android:id="@+id/mgmt_fragment"
            android:iconTint="@color/colorGrey"
            android:icon="@android:drawable/ic_menu_preferences"
            android:orderInCategory="10"
            android:title="@string/yubico_mgmt_demo"/>

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/settings_fragment"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="20"
            android:title="@string/settings"/>

        <item
            android:id="@+id/about_fragment"
            android:icon="@drawable/ic_info_24dp"
            android:orderInCategory="20"
            android:title="@string/about"/>
    </group>
</menu>