<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 Yubico.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_margin="@dimen/card_view_margin"
            android:scrollbars = "vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chresp_run_yubico_demo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/LoginTextInputLayout"
                android:hint="@string/chresp_challenge"
                android:layout_weight="4"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/challenge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="6"
                    android:inputType="textMultiLine"
                    style="@style/LoginTextInput"
                    tools:text="0e2df6bacc23764aeb3d9792ed17b063c7d254fa"/>
            </com.google.android.material.textfield.TextInputLayout>
            <ImageButton
                android:id="@+id/generate"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/configure_generate"
                android:src="@drawable/ic_refresh_24dp"/>

        </LinearLayout>

        <Button
            style="@style/LoginScreenButton"
            android:id="@+id/start_demo"
            android:text="@string/chresp_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:elevation="@dimen/card_view_margin"
            android:indeterminateTint="?colorAccent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/response"
            android:layout_margin="@dimen/card_view_margin"
            android:padding="@dimen/text_margin"
            android:textColor="@color/colorGrey"
            android:background="@drawable/green_rectangle_border_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>